--- a/game/game.vcxproj.filters
+++ b/game/game.vcxproj.filters
@@ -242,6 +242,9 @@
     <FxCompile Include="Resource\SimpleSkin.hlsl">
       <Filter>リソース ファイル</Filter>
     </FxCompile>
+    <FxCompile Include="Resource\VertexTest.hlsl">
+      <Filter>リソース ファイル</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\DirectXTK\include\SimpleMath.inl">
